--- a/assets/style.css
+++ b/assets/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    background-image: image-set();
+    background-image: url(https://i.pinimg.com/736x/f9/8a/38/f98a38b0eeccf76b5b93c4377a33e1aa.jpg);
     font-family: "Sofadi One", system-ui;
 }
 
